<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vladyslav.countrycapitals_v02.Zone">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/europe"
        android:textSize="25sp"
        android:id="@+id/btnEurope"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asia"
        android:textSize="25sp"
        android:id="@+id/btnAsia"
        android:layout_below="@+id/btnEurope"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/northAmerica"
        android:textSize="25sp"
        android:id="@+id/btnNorthAmerica"
        android:layout_below="@+id/btnAsia"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/southAmerica"
        android:textSize="25sp"
        android:id="@+id/btnSouthAmerica"
        android:layout_below="@+id/btnNorthAmerica"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/africa"
        android:textSize="25sp"
        android:id="@+id/btnAfrica"
        android:layout_below="@+id/btnSouthAmerica"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/australia"
        android:textSize="25sp"
        android:id="@+id/btnAustralia"
        android:layout_below="@+id/btnAfrica"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allCountries"
        android:textSize="25sp"
        android:id="@+id/btnAllCountries"
        android:layout_below="@+id/btnAustralia"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Выбор континента"
        android:textSize="30sp"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
